# work-time-tracker

./: .gitignore  README  d  test.rest
app/: Cargo.toml
app/src/: active_app.rs  afk.rs  auth.rs  auth_jwt.rs  config.rs  main.rs  networking.rs
app/src/daemons/: linux_daemonize.rs
backend/: Dockerfile  docker-compose.yml  requirements.txt
backend/app/: main.py
backend/app_service/: Dockerfile  main.py
backend/auth_service/: Dockerfile  requirements.txt
backend/auth_service/app/: auth.py  email_logic.py  instances.py  jwt_handler.py  main.py  routes.py  user_data.py
backend/auth_service/core/: redis_client.py  security.py  utils.py
backend/auth_service/database/: Dockerfile  alembic.ini  database.py  init.sql  models.py  schemas.py
backend/auth_service/mail/: email_sender.py  utils.py
backend/auth_service/routes/: auth_routes.py  change_routes.py  email_routes.py  token_routes.py  user_routes.py  username_routes.py
backend/data_processing_service/: Dockerfile  requirements.txt
backend/data_processing_service/app/: data_processing.py  main.py
backend/data_processing_service/database/: Dockerfile  database.py  init-mongo.js  models.py
backend/data_processing_service/middleware/: jwt_middleware.py
backend/data_processing_service/routes/: data_processing_routes.py  data_routes.py
backend/user-service/: Dockerfile  main.py
backend/user_service/: Dockerfile  requirements.txt
database/: Dockerfile  docker-compose.yml  init.sql
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  main.jsx
(+57 files in other folders)
