[package]
name = "app"
version = "0.1.0"
edition = "2021"


[dependencies]
active-win-pos-rs = "=0.8.3"
device_query = "2.1.0"
serde = {version =  "1.0.210",  features = ["derive"] }
serde_json = "1.0.1"
reqwest = {version = "0.12.8", features = ["json"]}
tokio = { version = "1.4", features = ["full"] }
daemonize = "0.5.0"
uzers = "0.12.1"
image = "0.25"
gtk = "0.18.1"
tray-item = { version = "0.10", features = ["ksni"] }
png = "0.17"
thiserror = "1.0.65"
bincode = "1.3.3"
log = "0.4"    
env_logger = "0.11.5"

